Development
    Clean up some depreciated symbol warnings
    Convert plugin_list to use gm_log
    Convert the majority of the code to use gm_log instead of printf
1.0.6
    Updated Portuguese translation
    Updated Japanese translation
1.0.6b1
    Fix a problem in the style parser, was looking at a null pointer
    Added WMP plugin properties enabled and enableContextMenu
    Suppress list display
    Add rtp to the list of streaming uris
    Set PACKAGE_LOCALE_DIR based on --localedir from configure
    Change HAVE_NEW_XULRUNNER to NPAPI_USE_UPPERCASE_UTF8
    Drop --enable_new_libxul configure flag as it is autodetected now
    Fix spelling mistake, but then comment out as not needed for normal usage Issue #163
1.0.5
    Disable playing of partially cached apple.com files, mplayer seems to crash on these files
    Use the right schema file, can't believe this one has slipped by so long.
    Use better const check from Issue #161, patch from i.stakenvicius
1.0.5b2
    Simpifying const check until something better comes along Issue #162
    Fix Issue #161, improvements over last patch because NPAPI not properly bumped
    Fix support for older xulrunners, Issue #160, issue caused by patch from
    Issue #158
    Support nsapi-sdk, based on patch from Issue #159
    Fix up some const casting so that compilers do not complain Issue #158
    Updated Japanese translation
    Updated Italian translation
1.0.5b1
    When uri is a file:// uri, just play it directly
    Switch from AM_MAINTAINER_MODE to AM_MAINTAINER_MODE([enable]) in configure.in
    Fix Issue #150, return value for function that says it will
    Updated Dutch translation
    Conversion to using libgmtk as separate library
    Improvements to the apple.com/trailers fix, caching now works properly
    Fix regression at apple.com/trailers, side effect of fully caching the file for now
1.0.4
	Fix problem where file is downloaded before gnome-mplayer is started (locally cached)